--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+
 body {
-    background-color: #E8e8e8;
+    background-color: #F6f9f9;
 }
+
+
+header {
+    background-color: white;
+    box-shadow: 0px 1px 2px rgb(214, 214, 214) ;
+    margin-bottom: 20px;
+}
+
+h1 { 
+    font-size: 2.4rem; 
+    line-height: 1.35; 
+    letter-spacing: -.08rem; 
+}
+
+.bouton {
+    color: #FFF;
+    background-color: #ce0033;
+    border-color: #ce0033; 
+}
+
+
+
