--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,53 @@ h1 {
     letter-spacing: -.08rem; 
 }
 
+h2 { font-size: 3.6rem; 
+    line-height: 1.25; 
+    letter-spacing: -.1rem; 
+}
+
+h3 { font-size: 3.0rem; 
+    line-height: 1.3;  
+    letter-spacing: -.1rem; 
+}
+
 .bouton {
     color: #FFF;
     background-color: #ce0033;
     border-color: #ce0033; 
 }
 
+#checkBtn {
+    display: none;
+}
+
+#listing {
+    display: none;
+}
+
+#checkBtn:checked ~ #listing {
+    display: block;
+}
+
+label {
+    cursor: pointer;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 1px 10px rgb(214, 214, 214)
+}
+
+label:hover {
+    background-color: white;
+}
+
+.extend {
+    font-size: 17px;
+}
+
+ul {
+    list-style-image: url(/images/bullet.png);
+}
 
 
