création et mise en forme de Vivre ensemble

--- a/css/style.css
+++ b/css/style.css
@@ -65,4 +65,14 @@ ul {
     list-style-image: url(/images/bullet.png);
 }
 
+#checkBtn2 {
+    display: none;
+}
 
+#listing2 {
+    display: none; 
+}
+
+#checkBtn2:checked ~ #listing2 {
+    display: block;
+}
