--- a/css/style.css
+++ b/css/style.css
@@ -108,13 +108,21 @@ ul {
     gap: 20px;
 }
 
+.top {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    grid-column: 3/11;
+}
+
 .intro {
     grid-column: 3/7;
     grid-row: 1;
+    width: 500px;
 }
 
 .charte {
-    grid-column: 8/11;
+    grid-column: 9/11;
     grid-row: 1;
 
 }
