--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ label:hover {
 }
 
 ul {
-    list-style-image: url("/kevinbatard.github.io/images/bullet.png");
+    list-style-image: url("/images/bullet.png");
 }
 
 #checkBtn2 {
